task08/cluster.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: final-exam
  name: final-exam-cp
  namespace: ismoil
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: final-exam
  type: ClusterIP
status:
  loadBalancer: {}
