task08/final-exam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  creationTimestamp: null
  name: final-exam
  namespace: ismoil
spec:
  rules:
  - host: ismoil.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: final-exam
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ismoil.nvrbckdown.uz
    secretName: k8s-tls
